services/drupal/web/themes/epa_theme/source/_patterns/00-config/01-mixins/_mixins.list.scss
// @file
// Various Mixins for List styles

@mixin list-clean {
  list-style-type: none;
  margin: 0;
  padding: 0;

  li {
    margin: 0;
    padding-left: 0;

    &::before {
      display: none;
    }
  }
}

@mixin list-inline {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;

  li {
    margin: 0;
    padding-left: 0;
  }

  > li {
    display: inline;
  }
}

@mixin list-pipeline($pipeline-border-color: gesso-color(ui, generic, border)) {
  @include clearfix;
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;

  > li {
    border-right: 1px solid $pipeline-border-color; // LTR
    display: block;
    float: left; // LTR
    margin-right: 0.75em; // LTR
    padding-left: 0;
    padding-right: 0.75em; // LTR

    @if $support-for-rtl {
      [dir='rtl'] & {
        border-left: 1px solid $pipeline-border-color;
        border-right: 0;
        float: right;
        margin-left: 0.75em;
        margin-right: 0;
        padding-left: 0.75em;
        padding-right: 0;
      }
    }

    /* stylelint-disable-next-line selector-no-qualifying-type */
    &.is-active {
      font-weight: gesso-font-weight(bold);
    }

    &:last-child {
      border-right: 0; // LTR
      margin-right: 0; // LTR
      padding-right: 0; // LTR

      @if $support-for-rtl {
        [dir='rtl'] & {
          border-left: 0;
          margin-left: 0;
          padding-left: 0;
        }
      }
    }
  }
}

@mixin list-border(
  $list-border-padding: 0.25rem,
  $list-border-color: gesso-color(ui, generic, border)
) {
  list-style: none;
  margin-left: 0;
  padding-left: 0;

  > li {
    border-bottom: 1px solid $list-border-color;
    margin-bottom: 0;
    padding: $list-border-padding;
  }
}

@mixin list-column(
  $list-column-count: 2,
  $list-column-gap: 2em,
  $list-item-padding: 0.25em
) {
  list-style: none;
  margin-left: 0;
  padding-left: 0;

  li {
    padding-left: 0;
  }

  > li {
    break-inside: avoid-column;
    display: table; // break-inside alternative for Firefox
    margin-bottom: 0;
    padding-bottom: $list-item-padding; // use padding instead of margin for Safari bug with CSS columns
  }

  @include breakpoint(500px) {
    column-count: $list-column-count;
    column-gap: $list-column-gap;
  }
}

